--- a/app/src/main/res/layout/activity_upload_image.xml
+++ b/app/src/main/res/layout/activity_upload_image.xml
@@ -28,6 +28,7 @@
         android:layout_marginBottom="16dp"
         android:onClick="uploadImage"
         android:text="@string/upload_photo"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.365"
