--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -19,6 +19,15 @@
             android:onClick="uploadImage"
             android:src="@drawable/ic_add_24" />
 
+        <ImageButton
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="?android:selectableItemBackground"
+            android:visibility="gone"
+            android:src="@drawable/back"
+            android:onClick="back"/>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
