--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -47,6 +47,15 @@
             android:background="?android:selectableItemBackground" />
 
         <ImageButton
+            android:id="@+id/settingsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:background="?android:selectableItemBackground"
+            android:visibility="gone"
+            app:srcCompat="@drawable/settings" />
+
+        <ImageButton
             android:id="@+id/logoutButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
