--- a/app/src/main/res/layout/fragment_user_ranking.xml
+++ b/app/src/main/res/layout/fragment_user_ranking.xml
@@ -75,12 +75,13 @@
 
     <GridView
         android:id="@+id/userRanking_grid"
+        android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_weight="0.45"
-        android:horizontalSpacing="10dp"
         android:numColumns="4"
-        android:verticalSpacing="10dp" />
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="2dp"
+        android:horizontalSpacing="2dp" />
 
 </LinearLayout>
