--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -25,8 +25,7 @@
             android:layout_height="match_parent"
             android:background="?android:selectableItemBackground"
             android:visibility="gone"
-            android:src="@drawable/back"
-            android:onClick="back"/>
+            android:src="@drawable/back"/>
 
     </LinearLayout>
     <LinearLayout
