Added more visual feedback of viewpic photograph

--- a/app/src/main/res/layout/activity_viewpic.xml
+++ b/app/src/main/res/layout/activity_viewpic.xml
@@ -65,7 +65,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="..."
-                    android:textColor="#FFF" />
+                    android:textColor="#99c0ff"
+                    android:textStyle="bold"/>
+
             </LinearLayout>
 
             <LinearLayout
