--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -66,7 +66,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="15dp"
         android:onClick="onClick"
-        android:text="Elegir Categoría"
+        android:text="VER FOTOS"
         app:layout_constraintBottom_toTopOf="@+id/topUsers"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
