--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,11 +33,12 @@
             android:layout_marginLeft="10dp">
 
             <ImageView
+                android:id="@+id/profile_pic"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:background="?android:selectableItemBackground"
-                android:src="@drawable/ferran"/>
+                android:src="@drawable/profilepic_default"/>
         </android.support.v7.widget.CardView>
 
 
@@ -60,7 +61,7 @@
                     android:layout_width="wrap_content"
                     android:id="@+id/usernameText"
                     android:layout_height="wrap_content"
-                    android:text="ferdemar"
+                    android:text="username"
                     android:layout_marginLeft="10dp"
                     android:layout_gravity="center"
                     android:textSize="16dp"
