--- a/app/src/main/res/layout/fragment_user_ranking.xml
+++ b/app/src/main/res/layout/fragment_user_ranking.xml
@@ -2,86 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="#303030"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-
-        <ImageView
-            android:id="@+id/imageView5"
+        <ListView
+            android:id="@+id/userRanking_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingTop="5dp"
-            android:src="@drawable/gold_trophy" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingTop="5dp"
-            android:src="@drawable/silver_trophy" />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingTop="5dp"
-            android:src="@drawable/bronze_trophy" />
+            android:layout_marginTop="5dp"
+            android:scrollbars="vertical" />
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="#303030"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/userFirst"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="0.45"
-            android:background="?android:selectableItemBackground"
-            android:scaleType="fitXY"
-            android:src="@drawable/ferran" />
-
-        <ImageButton
-            android:id="@+id/userSecond"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="0.45"
-            android:background="?android:selectableItemBackground"
-            android:scaleType="fitXY"
-            android:src="@drawable/ferran" />
-
-        <ImageButton
-            android:id="@+id/userThird"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="0.45"
-            android:background="?android:selectableItemBackground"
-            android:scaleType="fitXY"
-            android:src="@drawable/ferran" />
-    </LinearLayout>
-
-    <GridView
-        android:id="@+id/userRanking_grid"
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.45"
-        android:numColumns="4"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="2dp"
-        android:horizontalSpacing="2dp" />
 
 </LinearLayout>
