Fixing errors in Ranking and profile
Score se actualiza bien

--- a/app/src/main/res/layout/fragment_user_ranking.xml
+++ b/app/src/main/res/layout/fragment_user_ranking.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <ListView
-            android:id="@+id/userRanking_list"
+            android:id="@+id/user_ranking_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
