Auto stash before merge of "HomeAndProfile" and "origin/HomeAndProfile"

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -48,13 +48,30 @@
         android:gravity="center" />
 
     <Button
-        android:id="@+id/changePasswordButton"
-        android:layout_width="wrap_content"
+        android:id="@+id/changeUsernameButton"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
+        android:onClick="changeUserNameAlert"
+        android:text="@string/username_alert" />
+
+    <Button
+        android:id="@+id/changePasswordButton"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:onClick="changePassword"
         android:text="@string/password_summary" />
+
+    <Button
+        android:id="@+id/changeLocationButton"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="changeLocationAlert"
+        android:text="@string/location_alert" />
+
 
     <Button
         android:id="@+id/deleteAccountButton"
