Casi terminada la app

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -74,7 +74,7 @@
                     android:src="@drawable/location" />
 
                 <TextView
-                    android:layout_width="80dp"
+                    android:layout_width="match_parent"
                     android:id="@+id/locationText"
                     android:layout_height="wrap_content"
                     android:text="location"
