--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,25 +9,16 @@
     android:layout_gravity="center">
 
 
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_weight="1.2"
+
+    <ImageView
+        android:id="@+id/profilePicture"
+        android:layout_width="225dp"
+        android:layout_height="194dp"
         android:layout_gravity="center"
-        app:cardCornerRadius="50dp"
-        app:cardElevation="10dp"
-        android:layout_marginLeft="10dp">
-
-        <ImageView
-            android:id="@+id/profilePicture"
-            android:layout_width="225dp"
-            android:layout_height="194dp"
-            android:layout_gravity="center"
-            android:background="?android:selectableItemBackground"
-            android:src="@drawable/avatar" />
-
-    </android.support.v7.widget.CardView>
+        android:background="?android:selectableItemBackground"
+        android:src="@drawable/avatar"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"/>
 
 
     <ImageButton
@@ -45,6 +36,8 @@
         android:layout_height="79dp"
         android:layout_marginTop="20dp"
         android:layout_weight="1.2"
+        android:textSize="20dp"
+        android:text="usuario"
         android:gravity="center" />
 
     <Button
@@ -52,7 +45,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:onClick="changeUserNameAlert"
         android:text="@string/username_alert" />
 
@@ -78,10 +71,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="90dp"
         android:layout_marginBottom="20dp"
         android:onClick="deleteAccount"
         android:text="@string/delete_account"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textStyle="bold"/>
 
 </LinearLayout>
